# movefmt

./: .gitignore  Cargo.toml  README.md
doc/: movefmt_impl_en.md  movefmt_impl_zh.md
src/: lib.rs
src/comment_fmt/config_proc_macro/src/: config_type.rs  item_enum.rs
src/comment_fmt/src/: comment.rs  lib.rs  shape.rs  string.rs  utils.rs
src/comment_fmt/src/config/: config_type.rs  mod.rs  options.rs
src/core/: fmt.rs  token_tree.rs
src/syntax_fmt/: big_block_fmt.rs  branch_fmt.rs  comment_fmt.rs  expr_fmt.rs  fun_fmt.rs  match_fmt.rs  mod.rs
src/tools/: movefmt_diff.rs  syntax.rs  utils.rs
tests/: fmt_test.rs
