[package]
name = "movefmt"
version = "1.0.0"
repository = "https://github.com/movebit/movefmt"
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]  
path = "src/lib.rs"  
  
[[bin]]  
name = "movefmt"  
path = "src/bin/main.rs"  

[dependencies]
anyhow = "1.0.52"
bisection = "0.1.0"
codespan-reporting = "0.11.1"
commentfmt = { version = "1.6.0", path = "src/comment_fmt" }
dotenvy = "0.15.7"
diff = "0.1"
getopts = "0.2"
lazy_static = "1.4.0"
lsp-types = "0.95.1"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
term = "0.7"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.2.2"
walkdir = "2"

move-command-line-common = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-compiler" }
move-ir-types = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-ir-types" }
move-package = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-package" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-symbol-pool" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.23.0", package = "move-core-types" }

[target.'cfg(not(target_os= "windows"))'.dependencies]
pprof = { version = "0.13.0" , features = ["flamegraph" , "protobuf"]}

[profile.release]
debug = true

[features]
pprof = []
